[package]
name = "polling"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v2.x.y" git tag
version = "2.5.2"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
rust-version = "1.47"
description = "Portable interface to epoll, kqueue, event ports, and wepoll"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/polling"
keywords = ["mio", "epoll", "kqueue", "iocp", "wepoll"]
categories = ["asynchronous", "network-programming", "os"]
exclude = ["/.*"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []

[dependencies]
cfg-if = "1"
log = "0.4.11"

[build-dependencies]
autocfg = "1"

[target.'cfg(any(unix, target_os = "fuchsia", target_os = "vxworks"))'.dependencies]
libc = "0.2.77"

[target.'cfg(windows)'.dependencies]
wepoll-ffi = { version = "0.1.2", features = ["null-overlapped-wakeups-patch"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.42"
features = [
    "Win32_System_IO",
    "Win32_Foundation"
]

[dev-dependencies]
easy-parallel = "3.1.0"
